base/deployment.yaml
apiVersion: argoproj.io/v1alpha1     
kind: Rollout  
metadata:
  name: rollout-bluegreen
spec:
  replicas: 6
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-bluegreen
  template:
    metadata:
      labels:
        app: rollout-bluegreen
    spec:
      containers:
      - name: rollouts-demo
        # image: argoproj/rollouts-demo:blue
        # image: argoproj/rollouts-demo:green
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 80
  strategy:
    blueGreen: 
      activeService: rollout-bluegreen-active
      previewService: rollout-bluegreen-preview
      autoPromotionEnabled: false
      previewReplicaCount: 2
      prePromotionAnalysis:
        templates:
        - templateName: rates
        args:
        - name: service-name
          value: rollout-bluegreen-preview.rollout-demo.svc.cluster.local
