base/istio-rollout-active.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bg-active
spec:
  hosts:
  - "*.active.sb01.nonprod.techmobile.spectrum.net"
  - "active.sb01.nonprod.techmobile.spectrum.net"
  gateways:
  - istio-system/services-ingress-gateway
  http:
    route:
    - destination:
        host: rollout-bluegreen-active
        port:
          number: 80
